--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <div>
                 <ul class="links">
-                    <li class="mobile"><a href="work2.html">Home</a></li>
+                    <li class="mobile"><a href="index.html">Home</a></li>
                     <li class="mobile"><a href="about.html">About</a></li>
                     <li class="mobile"><a href="menu.html">Specials</a></li>
                     <li class="mobile"><a href="contact.html">Contact Us</a></li>
