--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
         <nav>
             <div>
             <ul class="links">
-                <li><a href="work2.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="menu.html">Specials</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
