--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
         <nav>
             <div>
             <ul class="links">
-                <li class="desktop"><a href="work2.html">Home</a></li>
+                <li class="desktop"><a href="index.html">Home</a></li>
                 <li class="desktop"><a href="about.html">About</a></li>
                 <li class="desktop"><a href="menu.html">Specials</a></li>
                 <li class="desktop"><a href="contact.html">Contact Us</a></li>
