--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
                     <li class="mobile"><a href="contact.html">Contact Us</a></li>
                 </ul>
             <ul class="logo">
-                <li class="log"><a href="work2.html">Snacks</a></li>
-                <li class="b"><a href="work2.html">Snacks </a></li>
+                <li class="log"><a href="index.html">Snacks</a></li>
+                <li class="b"><a href="index.html">Snacks </a></li>
             </ul>
             </div>
             <div>
             <ul class="links">
-                <li class="desktop"><a href="work2.html">Home</a></li>
+                <li class="desktop"><a href="index.html">Home</a></li>
                 <li class="desktop"><a href="about.html">About</a></li>
                 <li class="desktop"><a href="menu.html">Specials</a></li>
                 <li class="desktop"><a href="contact.html">Contact Us</a></li>
