--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/index.css">
     <title>Document</title>
 </head>
-<body class="container">
+<body class="container" style="background-image:url(image/a2.jpg)">
     <header>
         <nav>
             <div>
