--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="about.css">
     <title>Document</title>
 </head>
 <body>
@@ -29,14 +29,14 @@
       
         <div class="image-container">
             <div class="image-item img-1">
-                <img src="images/a1.jpg" alt="">
+                <img src="a1.jpg" alt="">
                 <h3>Clean & Continental Place</h3>
                <p> The donut is on point, e get plenty jam<br>
                          &nbsp;&nbsp;Taste and Savour it</p><br>
                          <a href="login.html" class="a"> Read More </a>
             </div>
             <div class="image-item img-2">
-                <img src="images/a2.jpg" alt="">
+                <img src="a2.jpg" alt="">
                 <h3>100% Healthy Food</h3>
                <p> Ham burger like none, the taste is irresistable,<br>
                         Sweet pass glofes own</p><br>
